# Puzzle-15-GTK

./: .gitignore  README.md  eu.veldsoft.puzzle15.json  meson.build
data/: eu.veldsoft.puzzle15.appdata.xml.in  eu.veldsoft.puzzle15.desktop.in  eu.veldsoft.puzzle15.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  puzzle15-application.c  puzzle15-application.h  puzzle15-window.c  puzzle15-window.h  puzzle15-window.ui  puzzle15.gresource.xml
